understanding lazy initailization

--- a/02-springboot-spring-core/06-lazy-initialization/src/main/resources/application.properties
+++ b/02-springboot-spring-core/06-lazy-initialization/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=springcoredemo
+
+
+#this will initialize all beans to Lazy globally
+spring.main.lazy-initialization = true
